--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-mdl": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-social-login": "^3.4.14",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
