--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "google-map-react": "^2.1.10",
+    "google-maps-react": "^2.0.6",
     "moment": "^2.29.1",
     "nodemailer": "^6.6.3",
     "react": "^17.0.2",
