--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
     "react-input-calendar": "^0.5.4",
+    "react-login-github": "^1.0.7",
     "react-mdl": "^2.1.0",
     "react-medium-image-zoom": "^4.3.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-social-login": "^3.4.14",
+    "react-twitter-login": "^1.4.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
